# Student-Performance-Factors

./: README.md  package-lock.json  package.json  vite.config.js
src/: index.html
src/analysis/: pyproject.toml
src/analysis/src/: main.py
src/js/: chart.js
src/pages/: abaut_me.html  about.html  analysis.html  team.html
src/scss/: abaut.css  global.css
