[project]
name = "analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Tobias",email = "tobias.bp2004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.6,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"